miniextendr-macros/tests/ui/derive_altrep_integer_dataptr_plus_subset.stderr
error: `dataptr` and `subset` are mutually exclusive
 --> tests/ui/derive_altrep_integer_dataptr_plus_subset.rs:6:19
  |
6 | #[altrep(dataptr, subset)]
  |                   ^^^^^^
